# se-for-sci.github.io

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  README.md  _config.yml  _toc.yml  environment.yml  noxfile.py  pixi.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cd.yml
_static/: custom.css
content/: intro.md
content/week01/: cleanup_bessel.ipynb  intro.md  practices.md  programming_basics.ipynb  setup.md
content/week01_intro/: intro.md  programming_basics.ipynb
content/week01_intro_motivation/: cleanup_bessel.ipynb
content/week02/: advanced_steps.md  first_steps.md  git.md  intro.md
content/week03/: introoo.md  oodesign.md  pytest.md  python_setup.md  tdd.md  testing.md
content/week03_git/: first_steps.md  intro.md
content/week03_python/: debugging.md  python_setup.md  tdd.md
content/week03_testing/: testing.md
content/week04/: cd.md  ci.md  docs.md
content/week04_package/: task_runners.md  using_packages.md
content/week05/: packaging.md  precommit.md  task_runners.md  using_packages.md
content/week05_ci/: cd.md
content/week05_package/: packaging.md
content/week06/: introoo.md  oodesign.md
content/week06_oop/: introoo.md  oodesign.md
content/week07/: designpatt.md  functional.md  packaging.md  using_packages.md
content/week07_design/: designpatt.md  functional.md
content/week08/: docs.md  typing.md
content/week08_stat_typing/: typing.md
content/week08_static_typing/: typing.md
content/week09/: 06-rust.md  Compiled_Languages.ipynb  compiled.md  rust.md
content/week09/04-example/: CMakeLists.txt
content/week09/04-example/src/: FCNBase.cpp
content/week09_binding/05-embed/: CMakeLists.txt
content/week09_binding/06-rust/: Cargo.toml
content/week09_binding/06-rust/src/: lib.rs
content/week1/: cleanup_bessel.ipynb  intro.md  practices.md  programming_basics.ipynb  setup.md  vcs.md
content/week10/: debugging.md  profiling.md
content/week10_compiled/: Compiled_Languages.ipynb  debugging.md  profiling.md
content/week11/: compute_pi.f90  compute_pi_mpi.f90  compute_pi_omp.c  compute_pi_omp.f90  concepts.md  debugging.md  intro.md  mpi.md  openmp.md  threading.md  (+1 more)
content/week12/05-embed/: CMakeLists.txt  embedded_python.cpp
notes/: week1a.md  week1b.md  week2a.md  week2b.md  week3a.md  week3b.md  week4a.md  week4b.md  week5a.md  week5b.md  week6a.md  week7a.md  week7b.md  week8a.md
slides/: week-01-1.md  week-01-2.md  week-03-1.md  week-05-1.md  week-06-1.md  week-06-2.md  week-07-1.md  week-07-2.md  week-08-1.md
(+95 files in other folders)
